--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
-    <!-- <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="manifest" href="/site.webmanifest" /> -->
+  
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -22,10 +18,12 @@
 
     <!-- Bootstrap 5 CSS & JS Links -->
     <link rel="stylesheet" href="/bootstrap-5.0.2/dist/css/bootstrap.min.css">
-    <script type="module" src="/bootstrap-5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    
     <!--  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <!-- Google tag (gtag.js) --> 
+     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TLY2PM13Z5"></script> 
     <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());   gtag('config', 'G-TLY2PM13Z5'); </script>
 
